dodal translator.js k originalni datoteki

--- a/examples/translator/index.html
+++ b/examples/translator/index.html
@@ -1486,6 +1486,7 @@
   
   </script>
   <script src="../assets/redpitaya.custom.js"></script>
+  <script src="translator.js"></script>
 </head>
 <body>
   <div class="header">
