--- a/examples/translator/index.html
+++ b/examples/translator/index.html
@@ -1494,6 +1494,8 @@
       <a id="btn_exit" class="pull-left" href="/index.html"><span class="glyphicon glyphicon-chevron-left" title="Exit" alt="Exit"></span></a>
       <img class="logo pull-left" src="../assets/images/logo_white.png">
       <h2 class="page-title">Oscilloscope</h2>
+      <a href='#sl' class='translate'>sl</a>
+      <a href='#en' class='translate'>en</a>
     </div>
   </div>
   <div class="container">
